# NcaFinder2

./: .gitignore  CMakeLists.txt  README.md
source/: Aes.cpp  Aes.h  AesCtrDecryptor.cpp  AesCtrDecryptor.h  AesCtrStorage.cpp  AesCtrStorage.h  BlockRecoverer.cpp  BlockRecoverer.h  Common.h  ErrorCode.cpp  ErrorCode.h  Extents.h  FileStorage.cpp  FileStorage.h  HISha256Processor.cpp  HISha256Processor.h  IBlockVerifier.h  IDecryptor.h  ISectionProcessor.h  IStorage.h  IvfcProcessor.cpp  IvfcProcessor.h  LocationRecord.h  Log.h  Logger.h  MultiLogger.cpp  MultiLogger.h  MultiLogger.posix.cpp  MultiLogger.posix.h  MultiLogger.win32.cpp  MultiLogger.win32.h  NcaDumper.cpp  NcaFinder.cpp  NcaHeaders.cpp  NcaHeaders.h  NcaProcessor.cpp  NcaProcessor.h  PlaintextDecryptor.cpp  PlaintextDecryptor.h  ProgressBar.cpp  (+10 more)
